# SuperMarioBros-C

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  FIXES.md  METHOD_LENGTHS.md  README.md  TODO.md  music-engine-demo.html  smb-allitems.fm2  smb-allitems.lag
codegen/: CMakeLists.txt  translator.cpp
examples/: smb_physics_min.cpp
prompts/: refactor.txt
source/: Constants.hpp  Main.cpp
source/Emulation/: APU.cpp  Controller.hpp  Fm2Movie.cpp  Fm2Movie.hpp  MemoryAccess.cpp  MemoryAccess.hpp  PPU.cpp  PPU.hpp
source/SMB/: SMB.cpp  SMB.hpp  SMBArea.cpp  SMBConstants.hpp  SMBData.cpp  SMBDataPointers.hpp  SMBEnemies.cpp  SMBEnemyGfx.cpp  SMBEngine.cpp  SMBEngine.hpp  SMBGame.cpp  SMBObject.cpp  SMBPlayer.cpp  SMBSound.cpp
source/Util/: RamMap.cpp  RamMap.hpp  Video.cpp  Video.hpp
tools/: README.md  cells.py  check.sh  degoto.py  exits.py  foldloads.py  inline.py  intro-var-all.py  intro-var.py  itercmp.py  lagframes.lua  layers.py  method_lengths.py  nmifull.lua  predicate.py  smbcfg.py  smbram.py  split.py  subroutines.py  trace.py
